fixing merge with algolia

--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,13 @@
   <meta charset="utf-8">
   <title>FreshInno</title>
   <base href="/">
-
+  <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.2.2/angular-materialize.min.js"></script> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<<<<<<< HEAD
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-=======
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.0.0/dist/instantsearch.min.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.0.0/dist/instantsearch-theme-algolia.min.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
->>>>>>> feature/algolia
 </head>
 <body>
   <app-root></app-root>
